--- a/index.html
+++ b/index.html
@@ -5,13 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Campo Minato</title>
 
-    <!-- <style> -->
+    <!-- Bootstrap link -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <!-- Custom styles -->
     <link rel="stylesheet" href="css/style.css">
 
     <!-- script js -->
     <script defer src="js/script.js"></script>
+
 </head>
 <body>
-    
+    <header>
+        <nav class="navbar bg-body-tertiary justify-content-around">
+            <a class="navbar-brand">Campominato grid</a>
+            <div> Difficoltà:  
+                <select id="difficulty" class="btn btn-outline-info">
+                    <option value="1">easy</option>
+                    <option value="2">medium</option>
+                    <option value="3">hard</option>
+                </select>
+            </div>
+            <button id="play-button" class="btn btn-outline-success" type="button">Play</button>
+        </nav>
+    </header>
+    <main>
+        <div class="d-flex">
+            <div id="grid">
+
+            </div>
+        </div>
+    </main>
 </body>
 </html>
