added function button and crated grid

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <nav class="navbar bg-body-tertiary justify-content-around">
             <a class="navbar-brand">Campominato grid</a>
             <div> Difficoltà:  
-                <select id="difficulty" class="btn btn-outline-info">
-                    <option value="1">easy</option>
-                    <option value="2">medium</option>
-                    <option value="3">hard</option>
+                <select id="select-level" class="btn btn-outline-info">
+                    <option value="easy">easy</option>
+                    <option value="normal">medium</option>
+                    <option value="hard">hard</option>
                 </select>
             </div>
             <div id="score-display" class="navbar-text">Punteggio: 0</div>
