added section score

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <option value="hard">hard</option>
                 </select>
             </div>
-            <div id="score-display" class="navbar-text">Punteggio: 0</div>
+            <div class="navbar-text">Punteggio: <strong  id="score-display"></strong></div>
             <button id="play-button" class="btn btn-outline-success" type="button">Play</button>
         </nav>
     </header>
